@@ -2,6 +2,6 @@ bin_PROGRAMS = tcpflow
 tcpflow_SOURCES = datalink.cpp flow.cpp \
 	pcap_fake.h pcap_fake.cpp \
 	main.cpp \
-	tcpip.cpp sysdep.h tcpdemux.h tcpflow.h xml.h xml.cpp util.cpp \
+	tcpip.cpp tcpdemux.h tcpflow.h xml.h xml.cpp util.cpp \
 	md5.h md5.c
 
