@@ -1,3 +1,7 @@
+2012-07-02  Simson Garfinkel  <simsong@mncrnpsedu.local>
+
+	* src/sysdep.h: removed; put code in tcpflow.h for simplicity
+
 2012-06-26  mike  <mike@reem>
 
 	* src/datalink.cpp (dl_null): moved ETHERTYPE_IPV6 from sysdep.h
